--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -3,7 +3,7 @@
   doi = {10.1088/1361-6587/ac48bc},
   url = {https://doi.org/10.1088/1361-6587/ac48bc},
   year = 2022,
-  month = {feb},
+  month = {2},
   publisher = {{IOP} Publishing},
   volume = {64},
   number = {3},
@@ -20,7 +20,7 @@
   doi = {10.1088/1748-0221/16/12/c12005},
   url = {https://doi.org/10.1088/1748-0221/16/12/c12005},
   year = 2021,
-  month = {dec},
+  month = {12},
   publisher = {{IOP} Publishing},
   volume = {16},
   number = {12},
@@ -37,7 +37,7 @@
   doi = {10.1088/1361-6587/ab4f32},
   url = {https://doi.org/10.1088/1361-6587/ab4f32},
   year = 2019,
-  month = {nov},
+  month = {11},
   publisher = {{IOP} Publishing},
   volume = {62},
   number = {1},
@@ -83,7 +83,7 @@
   doi = {10.1088/1741-4326/aa8cea},
   url = {https://doi.org/10.1088/1741-4326/aa8cea},
   year = 2017,
-  month = {nov},
+  month = {11},
   publisher = {{IOP} Publishing},
   volume = {58},
   number = {1},
@@ -100,7 +100,7 @@
   doi = {10.1088/1741-4326/aa8f05},
   url = {https://doi.org/10.1088/1741-4326/aa8f05},
   year = 2017,
-  month = {nov},
+  month = {11},
   publisher = {{IOP} Publishing},
   volume = {58},
   number = {1},
@@ -117,7 +117,7 @@
   doi = {10.1088/1361-6587/aac0d5},
   url = {https://doi.org/10.1088/1361-6587/aac0d5},
   year = 2018,
-  month = {may},
+  month = {5},
   publisher = {{IOP} Publishing},
   volume = {60},
   number = {7},
@@ -197,7 +197,7 @@
   doi = {10.1088/0029-5515/55/10/104013},
   url = {https://doi.org/10.1088/0029-5515/55/10/104013},
   year = 2015,
-  month = {jul},
+  month = {7},
   publisher = {{IOP} Publishing},
   volume = {55},
   number = {10},
@@ -232,12 +232,12 @@
   doi = {10.1088/0029-5515/55/9/093013},
   url = {https://doi.org/10.1088/0029-5515/55/9/093013},
   year = 2015,
-  month = {aug},
+  month = {8},
   publisher = {{IOP} Publishing},
   volume = {55},
   number = {9},
   pages = {093013},
-  author = {C. Reux and V. Plyusnin and B. Alper and D. Alves and B. Bazylev and E. Belonohy and A. Boboc and S. Brezinsek and I. Coffey and J. Decker and P. Drewelow and S. Devaux and P.C. de Vries and A. Fil and S. Gerasimov and L. Giacomelli and S. Jachmich and E.M. Khilkevitch and V. Kiptily and R. Koslowski and U. Kruezi and M. Lehnen and I. Lupelli and P.J. Lomas and A. Manzanares and A. Martin De Aguilera and G.F. Matthews and J. Mlyn{\'{a}}{\v{r}} and E. Nardon and E. Nilsson and C. Perez von Thun and V. Riccardo and F. Saint-Laurent and A.E. Shevelev and G. Sips and C. Sozzi and},
+  author = {C. Reux and V. Plyusnin and B. Alper and D. Alves and B. Bazylev and E. Belonohy and A. Boboc and S. Brezinsek and I. Coffey and J. Decker and P. Drewelow and S. Devaux and P.C. de Vries and A. Fil and S. Gerasimov and L. Giacomelli and S. Jachmich and E.M. Khilkevitch and V. Kiptily and R. Koslowski and U. Kruezi and M. Lehnen and I. Lupelli and P.J. Lomas and A. Manzanares and A. Martin De Aguilera and G.F. Matthews and J. Mlyn{\'{a}}{\v{r}} and E. Nardon and E. Nilsson and C. Perez von Thun and V. Riccardo and F. Saint-Laurent and A.E. Shevelev and G. Sips and C. Sozzi },
   title = {Runaway electron beam generation and mitigation during disruptions at {JET}-{ILW}},
   journal = {Nuclear Fusion},
   authorscopus = {true},
@@ -247,7 +247,7 @@
 
 
 @article{Shevelev2014,
-  author = {Shevelev,A.  and Kiptily,V.  and Chugunov,I.  and Khilkevitch,E.  and Gin,D.  and Doinikov,D.  and Naidenov,V.  and Plyusnin,V.  and EFDA-JET contributors},
+  author = {Shevelev,A.  and Kiptily,V.  and Chugunov,I.  and Khilkevitch,E.  and Gin,D.  and Doinikov,D.  and Naidenov,V. and Plyusnin,V.  and EFDA-JET contributors},
   title = {Study of runaway electrons with Hard X-ray spectrometry of tokamak plasmas},
   journal = {AIP Conference Proceedings},
   volume = {1612},
@@ -282,7 +282,7 @@
   doi = {10.1088/0029-5515/53/12/123004},
   url = {https://doi.org/10.1088/0029-5515/53/12/123004},
   year = 2013,
-  month = {nov},
+  month = {11},
   publisher = {{IOP} Publishing},
   volume = {53},
   number = {12},
@@ -314,7 +314,7 @@
   doi = {10.1088/0029-5515/51/8/083010},
   url = {https://doi.org/10.1088/0029-5515/51/8/083010},
   year = 2011,
-  month = {jul},
+  month = {7},
   publisher = {{IOP} Publishing},
   volume = {51},
   number = {8},
@@ -326,96 +326,96 @@
   authorwos = {true},
   addendum = {(Scopus, WoS)},
 }
-
-@inproceedings{confbib1,
-  author = {Фамилия, И. О.},
-  title = {название тезисов конференции},
-  booktitle = {Название сборника},
-  year = {2015},
-  language = {russian},
-  authorconf = {true},
-}
-
-@CONFERENCE{confbib2,
-  author = {Фамилия, И. О.},
-  title = {название тезисов конференции},
-  booktitle = {Название сборника},
-  year = {2015},
-  language = {russian},
-  authorconf = {true},
-}
-
-@ARTICLE{bib1,
-  author = {Фамилия, И. О.},
-  title = {Название статьи},
-  journal = {Журнал},
-  year = {2012},
-  volume = {1},
-  pages = {100},
-  language = {russian},
-  authorother = {true},
-  authorconf = {true},
-}
-
-@CONFERENCE{bib2,
-  author = {Фамилия, И. О.},
-  title = {название тезисов конференции},
-  booktitle = {Название сборника},
-  year = {2012},
-  language = {russian},
-  authorconf = {true},
-}
-
-@ARTICLE{scbib1,
-  author = {Фамилия, И. О. and Фамилия2, И. О. and Фамилия3, И. О.},
-  title = {Название статьи},
-  journal = {Журнал},
-  year = {2018},
-  volume = {2},
-  number = {1},
-  pages = {99--102},
-  language = {russian},
-  authorscopus = {true},
-  authorwos = {true},
-  addendum = {(Scopus, WoS)},
-}
-
-@ARTICLE{vakbib1,
-  author = {Фамилия, И. О. and Фамилия2, И. О. and Фамилия3, И. О.},
-  addendum = {(0,28~п.~л.; ВАК, WoS)},
-  title = {Название статьи},
-  journal = {Журнал},
-  year = {2013},
-  volume = {1},
-  number = {5},
-  pages = {100--120},
-  language = {russian},
-  authorvak = {true},
-  authorwos = {true},
-}
-
-@ARTICLE{vakbib2,
-  author = {Фамилия, И. О. and Фамилия2, И. О. and Фамилия3, И. О. and Фамилия4, И. О.},
-  addendum = {(0,33~п.~л.~/ 0,28~п.~л.; ВАК)},
-  title = {Название статьи},
-  journal = {Журнал},
-  year = {2014},
-  volume = {1},
-  number = {5},
-  pages = {100--120},
-  language = {russian},
-  authorvak = {true},
-}
-
-@ARTICLE{wosbib1,
-  author = {Фамилия, И. О. and Фамилия2, И. О. and Фамилия3, И. О.},
-  addendum = {(0,21~п.~л., WoS)},
-  title = {Название статьи},
-  journal = {Журнал},
-  year = {2011},
-  volume = {1},
-  number = {8},
-  pages = {105--120},
-  language = {russian},
-  authorwos = {true},
-}
+%
+%@inproceedings{confbib1,
+%  author = {Фамилия, И. О.},
+%  title = {название тезисов конференции},
+%  booktitle = {Название сборника},
+%  year = {2015},
+%  language = {russian},
+%  authorconf = {true},
+%}
+%
+%@CONFERENCE{confbib2,
+%  author = {Фамилия, И. О.},
+%  title = {название тезисов конференции},
+%  booktitle = {Название сборника},
+%  year = {2015},
+%  language = {russian},
+%  authorconf = {true},
+%}
+%
+%@ARTICLE{bib1,
+%  author = {Фамилия, И. О.},
+%  title = {Название статьи},
+%  journal = {Журнал},
+%  year = {2012},
+%  volume = {1},
+%  pages = {100},
+%  language = {russian},
+%  authorother = {true},
+%  authorconf = {true},
+%}
+%
+%@CONFERENCE{bib2,
+%  author = {Фамилия, И. О.},
+%  title = {название тезисов конференции},
+%  booktitle = {Название сборника},
+%  year = {2012},
+%  language = {russian},
+%  authorconf = {true},
+%}
+%
+%@ARTICLE{scbib1,
+%  author = {Фамилия, И. О. and Фамилия2, И. О. and Фамилия3, И. О.},
+%  title = {Название статьи},
+%  journal = {Журнал},
+%  year = {2018},
+%  volume = {2},
+%  number = {1},
+%  pages = {99--102},
+%  language = {russian},
+%  authorscopus = {true},
+%  authorwos = {true},
+%  addendum = {(Scopus, WoS)},
+%}
+%
+%@ARTICLE{vakbib1,
+%  author = {Фамилия, И. О. and Фамилия2, И. О. and Фамилия3, И. О.},
+%  addendum = {(0,28~п.~л.; ВАК, WoS)},
+%  title = {Название статьи},
+%  journal = {Журнал},
+%  year = {2013},
+%  volume = {1},
+%  number = {5},
+%  pages = {100--120},
+%  language = {russian},
+%  authorvak = {true},
+%  authorwos = {true},
+%}
+%
+%@ARTICLE{vakbib2,
+%  author = {Фамилия, И. О. and Фамилия2, И. О. and Фамилия3, И. О. and Фамилия4, И. О.},
+%  addendum = {(0,33~п.~л.~/ 0,28~п.~л.; ВАК)},
+%  title = {Название статьи},
+%  journal = {Журнал},
+%  year = {2014},
+%  volume = {1},
+%  number = {5},
+%  pages = {100--120},
+%  language = {russian},
+%  authorvak = {true},
+%}
+%
+%@ARTICLE{wosbib1,
+%  author = {Фамилия, И. О. and Фамилия2, И. О. and Фамилия3, И. О.},
+%  addendum = {(0,21~п.~л., WoS)},
+%  title = {Название статьи},
+%  journal = {Журнал},
+%  year = {2011},
+%  volume = {1},
+%  number = {8},
+%  pages = {105--120},
+%  language = {russian},
+%  authorwos = {true},
+%}
