--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -359,7 +359,6 @@
   language = {russian}
 }
 
-
 @article{Wilson1925, 
   title={The Acceleration of β-particles in Strong Electric Fields such as those of Thunderclouds}, 
   volume={22}, 
@@ -381,6 +380,113 @@
   url={https://books.google.ru/books?id=iPlAwZI6HIYC},
   year={2004},
   publisher={Clarendon Press}
+}
+
+@article{Sokolov1979, 
+  title={"Размножение" ускоренных электронов в токамаке}, 
+  volume={29}, 
+  number={4}, 
+  journal={Письма в ЖЭТФ}, 
+  author={Соколов, Ю. А.}, 
+  year={1979}, 
+  pages={244–246}
+}
+
+@BOOK{Rozansky2012,
+  author = { Рожанский, В. А.},
+  address = {Санкт-Петербург},
+  publisher = {Лань},
+  title = {Теория плазмы},
+  year = {2012},
+  language = {russian}
+}
+
+
+@article{Rosenbluth1997,
+  doi = {10.1088/0029-5515/37/10/i03},
+  url = {https://doi.org/10.1088/0029-5515/37/10/i03},
+  year = 1997,
+  month = {10},
+  publisher = {{IOP} Publishing},
+  volume = {37},
+  number = {10},
+  pages = {1355--1362},
+  author = {M.N Rosenbluth and S.V Putvinski},
+  title = {Theory for avalanche of runaway electrons in tokamaks},
+  journal = {Nuclear Fusion},
+}
+
+
+@article{Helander2002,
+  doi = {10.1088/0741-3335/44/12b/318},
+  url = {https://doi.org/10.1088/0741-3335/44/12b/318},
+  year = 2002,
+  month = {11},
+  publisher = {{IOP} Publishing},
+  volume = {44},
+  number = {12B},
+  pages = {B247--B262},
+  author = {P Helander and L-G Eriksson and F Andersson},
+  title = {Runaway acceleration during magnetic reconnection in tokamaks},
+  journal = {Plasma Physics and Controlled Fusion},
+}
+
+@article{Galvao2001,
+  doi = {10.1088/0741-3335/43/9/302},
+  url = {https://doi.org/10.1088/0741-3335/43/9/302},
+  year = 2001,
+  month = {8},
+  publisher = {{IOP} Publishing},
+  volume = {43},
+  number = {9},
+  pages = {1181--1190},
+  author = {R M O Galv{\~{a}}o and Yu K Kuznetsov and I C Nascimento and E Sanada and D O Campos and A G Elfimov and J I Elizondo and A N Fagundes and A A Ferreira and A M M Fonseca and E A Lerche and R Lopez and L F Ruchko and W P de S{\'{a}} and E A Saettone and J H F Severo and R P da Silva and V S Tsypin and R Valencia and A Vannucci},
+  title = {New regime of runaway discharges in tokamaks},
+  journal = {Plasma Physics and Controlled Fusion},
+}
+
+
+@article{Gill2002,
+  doi = {10.1088/0029-5515/42/8/312},
+  url = {https://doi.org/10.1088/0029-5515/42/8/312},
+  year = 2002,
+  month = {8},
+  publisher = {{IOP} Publishing},
+  volume = {42},
+  number = {8},
+  pages = {1039--1044},
+  author = {R.D. Gill and B. Alper and M. de Baar and T.C. Hender and M.F. Johnson and V. Riccardo and contributors to the EFDA-JET Workprogramme},
+  title = {Behaviour of disruption generated runaways in {JET}},
+  journal = {Nuclear Fusion},
+}
+
+
+@article{MartinSolis2017,
+  doi = {10.1088/1741-4326/aa6939},
+  url = {https://doi.org/10.1088/1741-4326/aa6939},
+  year = 2017,
+  month = {4},
+  publisher = {{IOP} Publishing},
+  volume = {57},
+  number = {6},
+  pages = {066025},
+  author = {J.R. Mart{\'{\i}}n-Sol{\'{\i}}s and A. Loarte and M. Lehnen},
+  title = {Formation and termination of runaway beams in {ITER} disruptions},
+  journal = {Nuclear Fusion},
+}
+
+
+@article{Burrows1990,
+  title = {The evaluated nuclear structure data file: Philosophy, content, and uses},
+  journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume = {286},
+  number = {3},
+  pages = {595-600},
+  year = {1990},
+  issn = {0168-9002},
+  doi = {https://doi.org/10.1016/0168-9002(90)90922-S},
+  url = {https://www.sciencedirect.com/science/article/pii/016890029090922S},
+  author = {Thomas W. Burrows},
 }
 
 %@ARTICLE{Article,
